# pulsos-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  pulsos-tui-guide.md
.github/workflows/: audit.yml  ci.yml  publish-packages.yml  release.yml
blog/: 01-building-pulsos-foundation.md  02-building-pulsos-correlation-engine.md
crates/pulsos-cli/: Cargo.toml
crates/pulsos-cli/src/: main.rs
crates/pulsos-cli/src/commands/: auth.rs  config.rs  daemon.rs  doctor.rs  doctor_fmt.rs  mod.rs  repos.rs  status.rs  views.rs  wizard.rs
crates/pulsos-cli/src/commands/ui/: screen.rs
crates/pulsos-cli/src/daemon/: engine.rs  mod.rs  notify.rs  server.rs  tray.rs
crates/pulsos-cli/src/output/: compact.rs  json.rs  mod.rs  table.rs
crates/pulsos-cli/src/tui/: actions.rs  app.rs  event.rs  keys.rs  log_buffer.rs  mod.rs  poll.rs  render.rs  settings_flow.rs  terminal.rs  theme.rs  visual_check.rs
crates/pulsos-cli/src/tui/widgets/: footer.rs  header.rs  health.rs  logs.rs  mod.rs  platform.rs  settings.rs  unified.rs
crates/pulsos-core/: Cargo.toml
crates/pulsos-core/src/: error.rs  lib.rs
crates/pulsos-core/src/analytics/: dora.rs
crates/pulsos-core/src/auth/: credential_store.rs  detect.rs  mod.rs  resolve.rs  validate.rs
crates/pulsos-core/src/cache/: keys.rs  mod.rs  store.rs
crates/pulsos-core/src/config/: mod.rs  types.rs  validate.rs
crates/pulsos-core/src/correlation/: confidence.rs  heuristic.rs  mod.rs  sha_match.rs
crates/pulsos-core/src/domain/: analytics.rs  deployment.rs  event.rs  health.rs  metrics.rs  mod.rs  project.rs
crates/pulsos-core/src/health/: mod.rs  pinger.rs
crates/pulsos-core/src/platform/: mod.rs  retry.rs
crates/pulsos-core/src/platform/github/: client.rs  mod.rs  types.rs
crates/pulsos-core/src/platform/railway/: client.rs  types.rs
crates/pulsos-core/src/platform/vercel/: client.rs  types.rs
crates/pulsos-core/src/scheduler/: budget.rs  mod.rs  poller.rs
crates/pulsos-core/src/sync/: correlate.rs  merge.rs  mod.rs
crates/pulsos-core/tests/: auth_integration.rs  correlation_integration.rs  github_integration.rs  railway_integration.rs  sync_integration.rs  vercel_integration.rs
crates/pulsos-test/: Cargo.toml
crates/pulsos-test/src/: builders.rs  lib.rs  mock_server.rs
crates/pulsos-test/src/fixtures/: mod.rs
docs/: PulsosDesignSystem.md  TDDv3.0.md  prdv3.0.md
release/aur/: PKGBUILD
release/homebrew/: pulsos.rb
release/scoop/: pulsos.json
