[workspace]
resolver = "2"
members = [
    "crates/pulsos-core",
    "crates/pulsos-cli",
    "crates/pulsos-test",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Vivallo04/pulsos-cli"

[workspace.dependencies]
# HTTP + async
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Cache
sled = "0.34"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Auth
keyring = "3"
secrecy = { version = "0.8", features = ["serde"] }

# Interactive
dialoguer = "0.11"
fuzzy-matcher = "0.3"

# Table output
tabled = "0.16"

# TUI (Phase 6)
ratatui = "0.29"
crossterm = "0.28"

# GraphQL
graphql_client = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"

# Paths
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto / random
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# Daemon / notifications
notify-rust = "4"
image = { version = "0.24", default-features = false, features = ["png"] }

# Testing
wiremock = "0.6"

# Internal crates
pulsos-core = { path = "crates/pulsos-core", version = "0.1.0" }
pulsos-test = { path = "crates/pulsos-test" }
